timeAnalysis/src/tml/parser/tmlParser.java
// Generated from tml.g4 by ANTLR 4.4
package tml.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAREN=1, RPAREN=2, RSBRACK=3, LSBRACK=4, RCBRACK=5, LCBRACK=6, PLUS=7, 
		MINUS=8, MULT=9, DIV=10, AND=11, OR=12, GT=13, LT=14, GEG=15, LEG=16, 
		EQUALS=17, DISTINCT=18, BANG=19, ASSIGN=20, COMMA=21, SEMI=22, NEW=23, 
		CLASS=24, LOCAL=25, DOT=26, WITH=27, SYNC=28, INT=29, FUT=30, THIS=31, 
		CAPACITY=32, IF=33, ELSE=34, JOB=35, RETURN=36, ID=37, NUMBER=38, WS=39, 
		LINECOMENTS=40, BLOCKCOMENTS=41;
	public static final String[] tokenNames = {
		"<INVALID>", "'('", "')'", "']'", "'['", "'}'", "'{'", "'+'", "'-'", "'*'", 
		"'/'", "'&&'", "'||'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'!'", 
		"'='", "','", "';'", "'new'", "'Class'", "'local'", "'.'", "'with'", "'get'", 
		"'Int'", "'Fut'", "'this'", "'capacity'", "'if'", "'else'", "'job'", "'return'", 
		"ID", "NUMBER", "WS", "LINECOMENTS", "BLOCKCOMENTS"
	};
	public static final int
		RULE_program = 0, RULE_method = 1, RULE_parameter = 2, RULE_type = 3, 
		RULE_extendedType = 4, RULE_statementList = 5, RULE_statement = 6, RULE_assignment = 7, 
		RULE_varDecl = 8, RULE_jobStmt = 9, RULE_returnStmt = 10, RULE_sideEffectExp = 11, 
		RULE_asyncInvoc = 12, RULE_syncInvoc = 13, RULE_sync = 14, RULE_newcog = 15, 
		RULE_newlocal = 16, RULE_ifStmt = 17, RULE_exp = 18;
	public static final String[] ruleNames = {
		"program", "method", "parameter", "type", "extendedType", "statementList", 
		"statement", "assignment", "varDecl", "jobStmt", "returnStmt", "sideEffectExp", 
		"asyncInvoc", "syncInvoc", "sync", "newcog", "newlocal", "ifStmt", "exp"
	};

	@Override
	public String getGrammarFileName() { return "tml.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode LCBRACK() { return getToken(tmlParser.LCBRACK, 0); }
		public TerminalNode WITH() { return getToken(tmlParser.WITH, 0); }
		public MethodContext method(int i) {
			return getRuleContext(MethodContext.class,i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode NUMBER() { return getToken(tmlParser.NUMBER, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode RCBRACK() { return getToken(tmlParser.RCBRACK, 0); }
		public List<MethodContext> method() {
			return getRuleContexts(MethodContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS || _la==INT) {
				{
				{
				setState(38); method();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44); match(LCBRACK);
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << INT) | (1L << FUT) | (1L << IF) | (1L << JOB) | (1L << RETURN) | (1L << ID))) != 0)) {
				{
				{
				setState(45); statement();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51); match(RCBRACK);
			setState(52); match(WITH);
			setState(53); match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tmlParser.ID, 0); }
		public TerminalNode LCBRACK() { return getToken(tmlParser.LCBRACK, 0); }
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public TerminalNode LPAREN() { return getToken(tmlParser.LPAREN, 0); }
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(tmlParser.COMMA); }
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(tmlParser.RPAREN, 0); }
		public TerminalNode RCBRACK() { return getToken(tmlParser.RCBRACK, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(tmlParser.COMMA, i);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); type();
			setState(56); match(ID);
			setState(57); match(LPAREN);
			setState(66);
			_la = _input.LA(1);
			if (_la==CLASS || _la==INT) {
				{
				setState(58); parameter();
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(59); match(COMMA);
					setState(60); parameter();
					}
					}
					setState(65);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(68); match(RPAREN);
			setState(69); match(LCBRACK);
			setState(70); statementList();
			setState(71); match(RCBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tmlParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); type();
			setState(74); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(tmlParser.INT, 0); }
		public TerminalNode CLASS() { return getToken(tmlParser.CLASS, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_la = _input.LA(1);
			if ( !(_la==CLASS || _la==INT) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtendedTypeContext extends ParserRuleContext {
		public TerminalNode LT() { return getToken(tmlParser.LT, 0); }
		public TerminalNode GT() { return getToken(tmlParser.GT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode FUT() { return getToken(tmlParser.FUT, 0); }
		public ExtendedTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extendedType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitExtendedType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExtendedTypeContext extendedType() throws RecognitionException {
		ExtendedTypeContext _localctx = new ExtendedTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_extendedType);
		int _la;
		try {
			setState(85);
			switch (_input.LA(1)) {
			case CLASS:
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(78); type();
				}
				break;
			case FUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(79); match(FUT);
				setState(80); match(LT);
				setState(82);
				_la = _input.LA(1);
				if (_la==CLASS || _la==INT) {
					{
					setState(81); type();
					}
				}

				setState(84); match(GT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementListContext extends ParserRuleContext {
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitStatementList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementListContext statementList() throws RecognitionException {
		StatementListContext _localctx = new StatementListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statementList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << INT) | (1L << FUT) | (1L << IF) | (1L << JOB) | (1L << RETURN) | (1L << ID))) != 0)) {
				{
				{
				setState(87); statement();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public JobStmtContext jobStmt() {
			return getRuleContext(JobStmtContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(98);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93); varDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94); assignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95); ifStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(96); jobStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(97); returnStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(tmlParser.ASSIGN, 0); }
		public TerminalNode ID() { return getToken(tmlParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(tmlParser.SEMI, 0); }
		public SideEffectExpContext sideEffectExp() {
			return getRuleContext(SideEffectExpContext.class,0);
		}
		public ExtendedTypeContext extendedType() {
			return getRuleContext(ExtendedTypeContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(101);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << INT) | (1L << FUT))) != 0)) {
				{
				setState(100); extendedType();
				}
			}

			setState(103); match(ID);
			}
			setState(105); match(ASSIGN);
			setState(106); sideEffectExp();
			setState(107); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tmlParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(tmlParser.SEMI, 0); }
		public ExtendedTypeContext extendedType() {
			return getRuleContext(ExtendedTypeContext.class,0);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_varDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); extendedType();
			setState(110); match(ID);
			setState(111); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JobStmtContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(tmlParser.LPAREN, 0); }
		public TerminalNode SEMI() { return getToken(tmlParser.SEMI, 0); }
		public TerminalNode JOB() { return getToken(tmlParser.JOB, 0); }
		public TerminalNode RPAREN() { return getToken(tmlParser.RPAREN, 0); }
		public JobStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jobStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitJobStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JobStmtContext jobStmt() throws RecognitionException {
		JobStmtContext _localctx = new JobStmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_jobStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); match(JOB);
			setState(114); match(LPAREN);
			setState(115); exp(0);
			setState(116); match(RPAREN);
			setState(117); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStmtContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(tmlParser.RETURN, 0); }
		public TerminalNode SEMI() { return getToken(tmlParser.SEMI, 0); }
		public ReturnStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitReturnStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStmtContext returnStmt() throws RecognitionException {
		ReturnStmtContext _localctx = new ReturnStmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_returnStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119); match(RETURN);
			setState(120); exp(0);
			setState(121); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SideEffectExpContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public SyncContext sync() {
			return getRuleContext(SyncContext.class,0);
		}
		public NewlocalContext newlocal() {
			return getRuleContext(NewlocalContext.class,0);
		}
		public SyncInvocContext syncInvoc() {
			return getRuleContext(SyncInvocContext.class,0);
		}
		public AsyncInvocContext asyncInvoc() {
			return getRuleContext(AsyncInvocContext.class,0);
		}
		public NewcogContext newcog() {
			return getRuleContext(NewcogContext.class,0);
		}
		public SideEffectExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sideEffectExp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitSideEffectExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SideEffectExpContext sideEffectExp() throws RecognitionException {
		SideEffectExpContext _localctx = new SideEffectExpContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_sideEffectExp);
		try {
			setState(129);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(123); exp(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124); asyncInvoc();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(125); syncInvoc();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(126); sync();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(127); newcog();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(128); newlocal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsyncInvocContext extends ParserRuleContext {
		public ExpContext receiver;
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public TerminalNode ID() { return getToken(tmlParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(tmlParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(tmlParser.COMMA); }
		public TerminalNode RPAREN() { return getToken(tmlParser.RPAREN, 0); }
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(tmlParser.COMMA, i);
		}
		public TerminalNode BANG() { return getToken(tmlParser.BANG, 0); }
		public AsyncInvocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asyncInvoc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitAsyncInvoc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsyncInvocContext asyncInvoc() throws RecognitionException {
		AsyncInvocContext _localctx = new AsyncInvocContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_asyncInvoc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131); ((AsyncInvocContext)_localctx).receiver = exp(0);
			setState(132); match(BANG);
			setState(133); match(ID);
			setState(134); match(LPAREN);
			setState(143);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << THIS) | (1L << CAPACITY) | (1L << ID) | (1L << NUMBER))) != 0)) {
				{
				setState(135); exp(0);
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(136); match(COMMA);
					setState(137); exp(0);
					}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(145); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SyncInvocContext extends ParserRuleContext {
		public ExpContext receiver;
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public TerminalNode DOT() { return getToken(tmlParser.DOT, 0); }
		public TerminalNode ID() { return getToken(tmlParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(tmlParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(tmlParser.COMMA); }
		public TerminalNode RPAREN() { return getToken(tmlParser.RPAREN, 0); }
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(tmlParser.COMMA, i);
		}
		public SyncInvocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syncInvoc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitSyncInvoc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SyncInvocContext syncInvoc() throws RecognitionException {
		SyncInvocContext _localctx = new SyncInvocContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_syncInvoc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147); ((SyncInvocContext)_localctx).receiver = exp(0);
			setState(148); match(DOT);
			setState(149); match(ID);
			setState(150); match(LPAREN);
			setState(159);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << THIS) | (1L << CAPACITY) | (1L << ID) | (1L << NUMBER))) != 0)) {
				{
				setState(151); exp(0);
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(152); match(COMMA);
					setState(153); exp(0);
					}
					}
					setState(158);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(161); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SyncContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode DOT() { return getToken(tmlParser.DOT, 0); }
		public TerminalNode SYNC() { return getToken(tmlParser.SYNC, 0); }
		public SyncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sync; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tmlVisitor ) return ((tmlVisitor<? extends T>)visitor).visitSync(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SyncContext sync() throws RecognitionException {
		SyncContext _localctx = new SyncContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_sync);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163); exp(0);
			setState(164); match(DOT);
			setState(165); match(SYNC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
